--- a/services/webstore/web/package.json
+++ b/services/webstore/web/package.json
@@ -11,6 +11,7 @@
     "@boswaves-inc/smtp-sdk": "workspace:*",
     "@boswaves-inc/webstore-core": "workspace:*",
     "@coingecko/cryptoformat": "^0.8.2",
+    "@directus/sdk": "^20.3.0",
     "@directus/visual-editing": "^1.1.0",
     "@headlessui/react": "^2.2.9",
     "@radix-ui/react-checkbox": "^1.3.3",
